	PR other/15526 	* libgcc2.c (__mulvsi3): Fix overflow test. 	* gcc.dg/ftrapv-1.c: New test case.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82042 138bc75d-0d04-0410-961f-82ee72b054a4